--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -126,3 +126,19 @@
 # Helpers
 --------------------------------------------------------------*/
 @import "core/base/helpers";
+
+
+.bannerhome {
+    margin: 0px auto;
+    width: 100%;
+    min-height: 100vh;
+    padding: 40px 20px 20px;
+    display: flex;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    align-items: center;
+    background-image: url(/assets/images/banner.jpg);
+    background-size: cover;
+    overflow-x: hidden;
+}
